homework 1 is done

--- a/01-homework/index.html
+++ b/01-homework/index.html
@@ -6,5 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Змінні та типи</title>
   </head>
-  <body></body>
+  <body>
+    <!-- https://poslugy1c.github.io/cursor-homework-yura/01-homework/ -->
+    <h1>First homework</h1>
+
+    <script src="index.js"></script>
+  </body>
 </html>
