homework 2 is edited

--- a/02-homework/index.html
+++ b/02-homework/index.html
@@ -7,6 +7,8 @@
     <title>Цикли і Розгалуження</title>
   </head>
   <body>
+    <h1>Цикли і Розгалуження</h1>
+    <p>результат дивіться в консолі</p>
     <script src="index.js"></script>
   </body>
 </html>
