--- a/03-homework/index.html
+++ b/03-homework/index.html
@@ -6,7 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Функції</title>
   </head>
-  <body style="font-size: 20px; color: yellow; background-color: #0059ff">
+  <body
+    style="
+      font-size: 20px;
+      color: yellow;
+      background-color: #0059ff;
+      margin: 0 auto;
+    "
+  >
     <h1>Функції</h1>
 
     <script src="index.js"></script>
