homework 3 is edited 4

--- a/03-homework/index.html
+++ b/03-homework/index.html
@@ -9,6 +9,6 @@
   <body style="font-size: 20px; color: yellow; background-color: #0059ff">
     <h1>Функції</h1>
 
-    <!-- <script src="index.js"></script> -->
+    <script src="index.js"></script>
   </body>
 </html>
