--- a/12-homework/index.html
+++ b/12-homework/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="style.css" rel="stylesheet" />
     <title>Асинхронність та Date. Проміси</title>
   </head>
-  <body>
+  <body
+    style="
+      font-size: 50px;
+      color: rgb(19, 2, 250);
+      background-color: #ccdcf8;
+      text-align: center;
+    "
+  >
     <script src="index.js"></script>
   </body>
 </html>
