homework 13 is changed

--- a/13-homework/index.html
+++ b/13-homework/index.html
@@ -14,14 +14,15 @@
   </head>
   <body>
     <div class="container">
-      <button class="button" id="rormatWookiee">Перекладу на вукийську</button>
+      <button class="button" id="rormatWookiee">Переклад на вукийську</button>
       <div class="buttons">
         <button class="button" id="getInfo">Отримати інформацію</button>
         <input class="button__input" type="number" placeholder="2" />
       </div>
       <div class="buttons">
-        <button class="button" id="getPlanet">Cписок усіх планет</button>
-        <button class="button button__next" id="next">Next >></button>
+        <button class="button button__prev" id="prev">Prev</button>
+        <button class="button" id="getPlanet">Cписок планет</button>
+        <button class="button button__next" id="next">Next</button>
       </div>
 
       <div class="cards"></div>
